--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+	/*background: rgb(2,0,36);
+	background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+	font-family: 'Montserrat';
+	background-color: #ffffff;
+	background-image: linear-gradient(315deg, #FFFFFF 0%, #89C2D9 100%);
+    */
+}
+
+
+
+
+#salir {
+	float: right;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+.btn-delete {
+    border-radius: 5px;
+}
+
+.col-md-7-actualizar {
+    text-align: center;
+}
+
+.mb-3-actualizar {
+    margin: 0px auto;
+}
